theme: static: main.css: fix code blocks overflow

--- a/themes/mxkrsv/static/main.css
+++ b/themes/mxkrsv/static/main.css
@@ -35,6 +35,10 @@ code, pre {
 	background: #1d2021;
 }
 
+pre {
+	overflow: scroll;
+}
+
 nav {
 	text-align: center;
 	font-size: 1.2rem;
